# ATISS

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  dvc.yaml  environment.yaml  infer.py  pyproject.toml  setup.py
.dvc/: config
config/: bedrooms_zakharov_bs1024_config.yaml  bedrooms_zakharov_config.yaml
configs/: config.yaml
configs/atiss/: bedrooms_zakharov.yaml
configs/eval/: default.yaml
configs/export/: onnx.yaml
configs/export/tensorrt/: default.yaml
configs/infer/: example_room.json
configs/model/: atiss.yaml
configs/preprocess/: default.yaml
configs/serve/: mlflow.yaml
configs/train/: default.yaml
furniture_layout_generation/: __init__.py  config.py  data.py  export.py  inference.py  mlflow_model.py  runner.py  server.py  streamlit_app.py
scene_synthesis/: __init__.py  stats_logger.py  utils.py
scene_synthesis/datasets/: __init__.py  base.py  common.py  splits_builder.py  threed_front.py  threed_front_dataset.py  threed_front_scene.py  threed_future_dataset.py  utils.py
scene_synthesis/losses/: __init__.py  mmd.py
scene_synthesis/networks/: __init__.py  autoregressive_transformer.py  base.py  bbox_output.py  frozen_batchnorm.py  hidden_to_output.py
scripts/: compute_fid_scores.py  evaluate_atiss_metrics.py  evaluate_best_checkpoints.py  evaluate_kl_divergence_object_category.py  evaluate_openrouter_llm_baseline.py  failure_correction.py  generate_scenes.py  object_suggestions.py  pickle_threed_future_dataset.py  preprocess_data.py  render_threedfront_scene.py  scene_completion.py  synthetic_vs_real_classifier.py  test_inference_server.py  train_network.py  train_network_lightning.py  training_utils.py  utils.py
